updated json file

--- a/currency_detection/vercel.json
+++ b/currency_detection/vercel.json
@@ -1,17 +1,27 @@
 {
-    "builds": [
-        {
-            "src": "currency_detection/wsgi.py",
-            "use": "@vercel/python",
-            "config": {
-                "maxLambdaSize": "50mb", "runtime": "python3.11"
-            }   
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "currency_detection/wsgi.py"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "manage.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/media/(.*)",
+      "dest": "/media/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "manage.py"
+    }
+  ],
+  "env": {
+    "DJANGO_SETTINGS_MODULE": "currency_detection.settings",
+    "PYTHONUNBUFFERED": "1"
+  }
 }
