--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,14 @@ cycler==0.12.1
 debugpy==1.8.13
 decorator==5.2.1
 Django==5.1.7
+numpy==1.24.3
+opencv-python-headless==4.11.0.86
+Pillow==11.1.0
+pytesseract==0.3.13
+scikit-image==0.25.2
+olefile==0.46
+tifffile==2023.12.9
+tzdata==2023.3
 executing==2.2.0
 fonttools==4.56.0
 imageio==2.37.0
